@@ -640,6 +640,8 @@ void TMdPrm::vlGet( TVal &val )
 
 void TMdPrm::vlSet( TVal &val, const TVariant &pvl )
 {
+    if(!enableStat() || !owner().startStat())	{ val.setS(EVAL_STR, 0, true); return; }
+
     //> Send to active reserve station
     if(owner().redntUse())
     {
